--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Expense Tracker</title>
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:900|Lily+Script+One|Reenie+Beanie" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
