Implemented react-router.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
         <div id="app"></div>
     </body>
 
-    <script src="/public/bundle.js"></script>
+    <script src="/public/bundled.js"></script>
 </html>
