--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Expense Tracker</title>
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
